--- a/bylaws.tex
+++ b/bylaws.tex
@@ -419,15 +419,16 @@ Five types of members are defined here.
 
 \item {\bf Student Member:} A graduate student working with a Senior Member at their institution can be designated as a Student Member by that Senior Member.  We do not anticipate granting membership to students who are not supervised by a Senior Member.
 
-\item {\bf Provisional Member:}  A provisional member is a someone who has not yet been approved for regular
-(Senior, Postdoctoral or Student) member status.  This status applies to all new Student and Postdoctoral members
-(including, for example, in an existing Senior Member's group).  It also applies to potential Senior Members whose membership
-application has been approved.  This is intended to be a temporary status, typically a year, allowing the member to demonstrate
-sufficient constructive engagement with the Collaboration.
 
-\textcolor{red}{
-\item {\bf Legacy Member:}  A Legacy Member is a former member who contributed in a key manner to the Project or analysis infrastructure, but is no longer engaged with the Collaboration and is therefore no longer a member.  This status is intended to convey authorship rights to such former members, and to bypass the normal membership procedures should they wish to re-engage with the Collaboration.
+\item\textcolor{red}{ {\bf Provisional Member:}  A provisional member is a someone who has not yet been approved for regular
+(Senior, Postdoctoral or Student) member status.  This status applies to all new Student and Postdoctoral members
+(including, for example, those in an existing Senior Member's group) as well as potential Senior Members and potential independent Postdoctoral Members.  This is intended to be a temporary status, typically a year, allowing the member to demonstrate
+sufficient constructive engagement with the Collaboration.
 }
+
+
+\item {\bf Legacy Member:}  A Legacy Member is a former member who contributed in a key manner to the Project or analysis infrastructure, but is no longer engaged with the Collaboration and is therefore no longer a member.  This status is intended to convey authorship rights to such former members, and to bypass the normal membership procedures should they wish to re-engage with the Collaboration.
+
 
 \end{itemize}
 
@@ -453,7 +454,7 @@ Herein, ``Members'' refers to Senior, Postdoctoral, Student and Provisional Memb
 
  Members must commit effort to approved infrastructure tasks.   
 The Membership Committee will work with the \exec\ to define and recommend infrastructure tasks that need filling, 
-\textcolor{blue}{ and to define and communicate with members the level of expected effort.}
+\textcolor{red}{ and to define and communicate with members the level of expected effort.}
 Tasks can include,  for example, designing, building, and testing software, hardware, or simulations; contributing to commissioning and observations; and management tasks. 
 Just as for the hardware, we anticipate having a collaboration-wide architecture for the software.  Thus, members will be expected to comply with interface, documentation and code review requirements in support of the goals of the Collaboration.   Other ways of contributing include taking on roles in the governance, including membership on the GB, EVC, ET, or the Councils and Committees described in \S\ref{sec:councils}.
 
