--- a/bylaws.tex
+++ b/bylaws.tex
@@ -723,7 +723,7 @@ The elected candidates begin to serve immediately after the elections are comple
 The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates. The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
 
 
-\subsection{First Election Council and Committee Chairs}
+\subsubsection{First Election Council and Committee Chairs}
 \textcolor{red}{The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the EVC.   Self-nominations are accepted.
 After a nomination period, the IEVC will consult with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position. 
 Each Voting Member votes for a single candidate for each  open  Chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. }
