--- a/bylaws.tex
+++ b/bylaws.tex
@@ -304,7 +304,7 @@ If no candidate agrees to stand for election, the terminating co-Spokesperson wi
 The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  If a Voting Member of the GB is elected to one of these positions, they must resign their GB seat prior to taking office as Chair, and this vacancy will be filled in the next GB election. 
 
 Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the EVC.   Self-nominations are accepted.
-After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position. 
+After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election. \textcolor{red}{Candidates are only allowed to stand for one open position.}
 Each Voting Member votes for a single candidate for each  open  Chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
 
 If no candidate agrees to stand for election, the terminating Chair will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of their term and the additional months served by the terminating Chair to equal two years.
