--- a/bylaws.tex
+++ b/bylaws.tex
@@ -78,7 +78,7 @@ Throughout this document,  a ``supermajority vote" is defined as a result with m
 
  %The presence of a simple majority of a body's members constitutes quorum for a meeting, and two-thirds of a body must be present for a vote to be valid.
 
-%Add definition of “ex officio” membership as membership by virtue of having another role, so that the Science Council Chairs are ex officio members of the ET,  and when a new Chair is elected, the old Chair rolls off the ET. 
+%Add definition of √íex officio√ì membership as membership by virtue of having another role, so that the Science Council Chairs are ex officio members of the ET,  and when a new Chair is elected, the old Chair rolls off the ET. 
 
 
 
@@ -422,7 +422,7 @@ Five types of members are defined here.
 
 \item\textcolor{red}{ {\bf Provisional Member:}  A provisional member is a someone who has not yet been approved for regular
 (Senior, Postdoctoral or Student) member status.  This status applies to all new Student and Postdoctoral members
-(including, for example, those in an existing Senior Member's group) as well as potential Senior Members and potential independent Postdoctoral Members.  This is intended to be a temporary status, typically a year, allowing the member to demonstrate
+(including, for example, those in an existing Senior Member's group) as well as potential Senior Members.  This is intended to be a temporary status, typically a year, allowing the member to demonstrate
 sufficient constructive engagement with the Collaboration.
 }
 
