--- a/bylaws.tex
+++ b/bylaws.tex
@@ -536,7 +536,7 @@ The Publication and Speakers Committee will continue to refine the policy, and p
 
 \subsection{Organization}
 The execution of the policy shall be overseen by the Publication and Speakers Committee and its sub-committees (\S\ref{sec:pubcouncil}). 
-{\color{red} The Science Council approves all projects that lead to publications.  The Science Council in addition establishes the slate of projects that advance the Collaboration's key science goals and it solicits the Working Groups for detailed proposals for carrying out these projects.  This is done in consultation with the ET and in accordance with the Spokepersons' yearly plan.}
+{\color{red} The Science Council approves all projects that lead to publications.  The Science Council in addition establishes the slate of projects that advance the Collaboration's key science goals, and it solicits the Working Groups for detailed proposals for carrying out these projects, producing a coherent plan.  This is done in consultation with the ET and in accordance with the Spokepersons' yearly plan.}
 The Spokespersons will help to navigate and resolve potential conflicts.
 The Membership Committee will keep track of active Collaboration members and Legacy Members for the purposes of establishing author lists for papers.
 
@@ -575,11 +575,8 @@ For the purposes of authorship, ``Active Members'' consist of Senior, Postdoctor
 
 \begin{enumerate}
 \item For Key Project papers, all Active Members of the Collaboration and all Legacy Members will automatically be placed on the author list.  The author list will start with ``The CMB-S4 Collaboration'' and otherwise be alphabetical, unless the Publication Board agrees that the paper should be submitted to a journal which requires the first author to be an individual.  In that case, the author list will be alphabetical.
-  {\color{red}\sout{The project team will designate a small number of corresponding authors to signify those most involved with the work.}}
   The Membership Board will provide the current list of eligible Active and Legacy Members to the Publication Board.
-  {\color{red}
-    \sout{Anyone who chooses to opt out of authorship for a given Key Project paper must  notify the Publication Board.}
-    In an email notification, these members will be encouraged to join the author list by confirming their acceptance of authorship online.}
+  {\color{red} Anyone who chooses to opt out of authorship for a given Key Project paper must  notify the Publication Board.}
 \item For non-key project papers, the author list will be two-tiered.
 %  The first tier will typically consist of untenured (or equivalent) members of the project team, ordered according to their preference.  (The publication panel can allow exceptions for senior scientists in the first tier in rare cases when justified by their contribution.)
   Project teams may organize the first author tier as appropriate for the paper, and although not required, conventionally the tenured members of the project team will appear in the second, alphabetical tier of authors.
@@ -626,7 +623,7 @@ Graduate thesis and dissertation documents are exempted from Collaboration revie
 \subsection{Talks and Public communications}
 %\Comment{[Ed. note: This is based on the non-controversial interim policy.]}
 
-The role of the Speakers Bureau is to help Collaboration members give more and better talks in support of the Collaboration. The duties of the Speakers Bureau are to:
+The role of the Speakers Bureau is to help Collaboration members give more and better talks in support of the Collaboration. In additon, the role of the Speakers Bureau is to ensure that talks get distributed among the collaboration members in a way that reflects the contributions of different members to the collaboration, their career status and the desire to promote junior members, and equity of opportunities to give talks. The duties of the Speakers Bureau are to:
 \begin{itemize}
 \item Solicit invitations to conferences and identify good venues for contributed talks.
 \item Actively solicit speakers for invitations or notable conferences with no volunteer speakers. Priority and consideration should be given to the teams from projects where alphabetical author lists may obscure their role. 
@@ -638,7 +635,10 @@ The role of the Speakers Bureau is to help Collaboration members give more and b
 
 
 {\color{red}
-To give a talk, a Collaboration member must notify the Speakers Bureau. This ensures that the Speakers Bureau has a chance to address overlapping talk requests or locate another appropriate speaker in the case of declined invitations.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The Speakers Bureau need not be informed of talks on other subjects that contain brief advertisements for CMB-S4 or of invited presentations that must remain confidential for programmatic reasons (e.g.~certain agency reviews or presentations to private foundations or donors).
+Any member invited to give a talk at a conference or workshop must forward that request, upon receipt, to the Speakers Bureau.  The Speakers Bureau will determine whether whether an alternate person is more appropriate to give the talk considering 
+the contributions of various members to the collaboration, the desire to promote junior members, and the fair distribution of opportunities to give talks.
+
+To give talks not in the above category, a Collaboration member must notify the Speakers Bureau. This ensures that the Speakers Bureau has a chance to address overlapping talk requests or locate another appropriate speaker in the case of declined invitations.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The Speakers Bureau need not be informed of talks on other subjects that contain brief advertisements for CMB-S4 or of invited presentations that must remain confidential for programmatic reasons (e.g.~certain agency reviews or presentations to private foundations or donors).
 
 %Final public oral presentations for thesis student have greater flexibility and may show unreleased data, but it is the responsibility of the student and advisor to maintain confidentiality of results.
 
