--- a/bylaws.tex
+++ b/bylaws.tex
@@ -499,7 +499,7 @@ The membership status of each member will be reviewed by the Membership Committe
 
 \item Each Senior Member, and each independent postdoc not co-located with a Senior Member, will submit an annual activity report to the Membership Committee.  Reports of the Senior Members should include discussion of the activities of their supervisees (e.g., postdocs and students) in their report. The Membership Committee will review those reports, consulting with Collaboration members and Working Group leaders as appropriate.
 
-\item Provisional Members will submit a annual activity report to the Membership Committee, which will review the report and determine whether the Provisional Member should be promoted to a Senior Member status, continue as a Provisional Member, or have their membership revoked.  Provisional Membership is intended to be a temporary status.
+\item Provisional Members will submit an annual activity report to the Membership Committee, which will review the report and determine whether the Provisional Member should be promoted to a Senior Member status, continue as a Provisional Member, or have their membership revoked.  Provisional Membership is intended to be a temporary status.
 
 \item Members leaving the Collaboration may be granted Legacy Membership upon review by the Membership Committee and approval by the GB.
 
@@ -635,7 +635,7 @@ The role of the Speakers Bureau is to help Collaboration members give more and b
 
 
 {\color{red}
-Any member invited to give a talk at a conference or workshop must forward that request, upon receipt, to the Speakers Bureau.  The Speakers Bureau will determine whether whether an alternate person is more appropriate to give the talk considering 
+Any member invited to give a talk at a conference or workshop must forward that request, upon receipt, to the Speakers Bureau.  The Speakers Bureau will determine whether an alternate person is more appropriate to give the talk considering 
 the contributions of various members to the collaboration, the desire to promote junior members, and the fair distribution of opportunities to give talks.
 
 To give talks not in the above category, a Collaboration member must notify the Speakers Bureau. This ensures that the Speakers Bureau has a chance to address overlapping talk requests or locate another appropriate speaker in the case of declined invitations.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The Speakers Bureau need not be informed of talks on other subjects that contain brief advertisements for CMB-S4 or of invited presentations that must remain confidential for programmatic reasons (e.g.~certain agency reviews or presentations to private foundations or donors).
