--- a/bylaws.tex
+++ b/bylaws.tex
@@ -287,7 +287,8 @@ If a Voting Member of the GB is elected as a co-Spokesperson, they must resign t
 
 Prior to the election, Voting Members are asked to nominate individuals for Spokesperson to the Election and Voting Commission. Each voter may nominate one candidate and self-nominations are accepted. %A minimum of two nominations is  required for a nominee to be eligible to appear on the slate of election candidates. 
 After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election.
-Each Voting Member votes for a single candidate for each open Spokesperson position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
+Each Voting Member votes for a single candidate for each open Spokesperson position. \textcolor{red}{A ranked voting scheme to be approved by the GB prior to the first election after the collaboration is formed will be used to determine the two Co-Spokespersons. Elections are to be held sufficiently early such that new electees may serve in ``observatory roles'' for three months prior to taking office.}
+In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
 
 %The elected candidates will take office when the EVC announces the results of the election to the Collaboration via email. 
 
@@ -305,7 +306,8 @@ The co-Chairs of the Science Council, and the Chairs of the Membership Committee
 
 Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the EVC.   Self-nominations are accepted.
 After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election. \textcolor{red}{Candidates are only allowed to stand for one open position.}
-Each Voting Member votes for a single candidate for each  open  Chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
+Each Voting Member votes for a single candidate for each  \textcolor{red}{open Committee  Chair position. A ranked voting scheme to be approved by the GB prior to the first election after the collaboration is formed will be used to determine the Science Council Co-chairs. Elections are to be held sufficiently early such that new electees may serve in ``observatory roles'' for three months prior to taking office.}
+In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
 
 If no candidate agrees to stand for election, the terminating Chair will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of their term and the additional months served by the terminating Chair to equal two years.
 
@@ -317,7 +319,8 @@ The 18 GB Members drawn Senior Members of the Collaboration are elected to two-y
 
 The election for the Senior Members on the GB proceeds as follows. 
 Prior to the election, Voting Members are asked to nominate individuals for the GB to the EVC.   Self-nominations are accepted. After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election.
-Each Voting Member votes for a single candidate for each vacant GB position.  % In the event of a tie for the last open position, a runoff election will be held between the two candidates that have the same number of votes. 
+%Each Voting Member votes for a single candidate for each vacant GB position.  % In the event of a tie for the last open position, a runoff election will be held between the two candidates that have the same number of votes. 
+\textcolor{red}{The EVC shall adopt a ranked voting system for the Governing Board election.  The exact details of this ranking scheme are to be determined by the EVC with approval of the Governing Board prior to the first Election after the collaboration is formed. }
 
 
 %Every year, following completion of the Spokeperson election and any required \exec \ elections, the EVC then carries out elections for seats on the Governing Board whose term is expiring in less than 12 months. The EVC first solicits self-nominations for Governing Board membership and candidate information is then circulated to qualified electors as defined in the membership section of these bylaws. 
@@ -394,7 +397,7 @@ The committee will draft all the necessary documents for external collaboration 
 
 \subsection{Education and Outreach Committee}
 
-The Education and Public Outreach (EPO) Committee is responsible for initiating, overseeing, and recording the Collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate Collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte after solicitation of nominations from the full Collaboration. The Chair is appointed by the Spokespersons. Terms on the EPO Committee are for two years, with some initial three-year terms to allow staggered appointments.   A presentation of EPO efforts and written documentation of activities must be provided to the \shorte at each Collaboration meeting or when requested by the \shorte. 
+The Education and Public Outreach (EPO) Committee is responsible for initiating, overseeing, and recording the Collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate Collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte after solicitation of nominations from the full Collaboration. The Chair is appointed by the Spokespersons. Terms on the EPO Committee are for two years, with some initial three-year terms to allow staggered appointments.   A presentation of EPO efforts and written documentation of activities must be provided to the \shorte\ at each Collaboration meeting or when requested by the \shorte. 
 
 \section{Membership Policy}
 
@@ -720,17 +723,18 @@ The elected candidates begin to serve immediately after the elections are comple
 \textcolor{red}{As is directed for elections once the Collaboration is established, the initial elections are timed to provide Collaboration Members multiple opportunities to participate in Collaboration governance. }
 
 \subsubsection{First Election of Co-spokespersons} 
-The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates. The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
-
+The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates.  \textcolor{red}{A ranked voting scheme to be approved by the ICCC prior to the election will be used to determine the two Co-Spokespersons. 
+The first Co-spokesperson terms are to be three years to enable staggered leadership elections with the other members of the Executive Team in future elections. }
+%, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
 
 \subsubsection{First Election Council and Committee Chairs}
-\textcolor{red}{The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the EVC.   Self-nominations are accepted.
+\textcolor{red}{The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the IEVC.   Self-nominations are accepted.
 After a nomination period, the IEVC will consult with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position. 
-Each Voting Member votes for a single candidate for each  open  Chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. }
+A ranked voting scheme to be approved by the ICCC prior to the election will be used to determine the Science Council co-Chairs. For the Committee chairs each Voting Member votes for a single candidate for each open Chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. }
 
 
 \subsubsection{First Election of the Governing Board}
-The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
+\textcolor{red}{The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws, with the modification that the ICCC is to approve the ranked vote scheme to be utilized. Additionally,} prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
 To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
 
 After the GB is established, it is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB will evolve to a fully elected body as the Collaboration matures. 
