tweaking SC pubs text

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -539,7 +539,10 @@ The Publication and Speakers Committee will continue to refine the policy, and p
 
 \subsection{Organization}
 The execution of the policy shall be overseen by the Publication and Speakers Committee and its sub-committees (\S\ref{sec:pubcouncil}). 
-{\color{red} The Science Council approves all projects that lead to publications.  The Science Council in addition establishes the slate of projects that advance the Collaboration's key science goals, and it solicits the Working Groups for detailed proposals for carrying out these projects, producing a coherent plan.  This is done in consultation with the ET and in accordance with the Spokepersons' yearly plan.}
+{\color{red} The Science Council (\S\ref{sec:SC}) approves all projects that lead to publications.
+The Science Council in addition establishes a slate of project categories that advance the Collaboration's key science goals, and it solicits the Working Groups for detailed proposals, producing a coherent plan.
+%  The Science Council in addition establishes a slate of projects categories that advance the Collaboration's key science goals, and it solicits the Working Groups for detailed proposals for carrying out these projects, producing a coherent plan.
+  This is done in consultation with the ET and in accordance with the Spokepersons' yearly plan.}
 The Spokespersons will help to navigate and resolve potential conflicts.
 The Membership Committee will keep track of active Collaboration members and Legacy Members for the purposes of establishing author lists for papers.
 
